--- a/backend/.env
+++ b/backend/.env
@@ -4,3 +4,5 @@ SECRET_KEY = easjdioanqiodn
 CLOUD_NAME=dlljkwxia
 API_KEY=331293937994657
 API_SECRET=X9DkRuuX14Nd42qbYr4xpOrXoZo   
+FRONTEND_URL=http://localhost:5173
+NODE_ENV=production
